test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_parse/plx1_sizeof_none_array.plx
pub fn main(none) i32 {
    return sizeof([2]none)
}
